# sbd2

./: .gitignore  CMakeLists.txt  README.md
data/: example.txt
reports/: zadanie2.tex
src/: CMakeLists.txt  main.cpp
src/cli/: Agent.h  CMakeLists.txt  Choice.h  FileAgent.cpp  FileAgent.h  InteractiveAgent.cpp  InteractiveAgent.h  IstreamAgent.cpp  IstreamAgent.h  RandomAgent.cpp  RandomAgent.h
src/generic/: File.h  Key.h  Pointer.h
src/impl/: CMakeLists.txt  Data.cpp  Data.h  Index.cpp  Index.h  IndexedFile.cpp  IndexedFile.h  Record.cpp  Record.h
src/time/: Clock.h  DiskClocks.h  Measurement.h  MeasurementAggr.h
src/util/: Config.h  Constants.h
test/: CMakeLists.txt  pages.cpp  perf2.cpp  serialization.cpp
